[package]
name = "scylla_catalytic_orm"
authors = ["Louis Wendler"]
version = "0.1.0"
edition = "2021"
description = "A demo application for a ScyllaDB Rust driver tutorial."
readme = "README.md"
homepage = "https://github.com/1ucky40nc3/scylladb_tutorials"
repository = "https://github.com/1ucky40nc3/scylladb_tutorials"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
